Fixed CSS for several email clients (margin/spacing issues, alignement)

--- a/mail/stylesheets/post_notification.scss
+++ b/mail/stylesheets/post_notification.scss
@@ -94,7 +94,7 @@ img { border: 0 }
 #greeting td { padding-bottom: 13px; color: #333; }
 
 #email-message-body { background-color: #fff; border-bottom: 1px solid #D9D8CB; }
-#email-message-body-td { padding: 22px 25px 0px 25px; }
+#email-message-body-td { padding: 22px 25px 0px 20px; }
 
 #email-author-avatar-td { vertical-align: top ; padding: 25px 0 20px 25px; width: 50px; }
 
@@ -103,13 +103,14 @@ img { border: 0 }
 #email-message-body div.p { font-size: 14px; line-height: 18px; margin-bottom: 10px; }
 
 .message-title { font-family: Helvetica, Arial, sans-serif; font-size: 18px; color: #333; font-weight: bold; margin: 0px 0px 7px 0px; }
+.message-title a { color: #333; }
 .message-body { color: #333 ; }
 .message-body a { color: #333; text-decoration: none; }
 
-#email-reply-methods-td { padding: 3px 25px 25px 25px; }
+#email-reply-methods-td { padding: 3px 25px 25px 20px; }
 
 #reply-button-td { width: 90px; padding: 0px 7px 0px 0px; color: #AD312F; font-weight: bold; font-family: Helvetica, Arial, sans-serif; font-size: 13px; }
-a.reply-now img { vertical-align: text-top; color: #AD312F; font-weight: bold; font-family: Helvetica, Arial, sans-serif; font-size: 13px; }
+a.reply-now img { vertical-align: text-top; color: #fff; background-color: #AD312F; font-weight: bold; font-family: Helvetica, Arial, sans-serif; font-size: 14px; }
 #reply-or-td { font-size: 13px; padding-top: 0px; font-family: Helvetica, Arial, sans-serif; }
 
 #reminder { width: 100% ; }
@@ -122,12 +123,31 @@ a.reply-now img { vertical-align: text-top; color: #AD312F; font-weight: bold; f
 
 #footer a span { color: #AD312F; }
     
-#legal-footer { background-color: #F5F4E8;  width: 100%; }
+#legal-footer { background-color: #F5F4E8;  width: 100%; text-align: center; }
 #legal-footer { 
-    a, a span { text-decoration: underline ; font-weight: bold ; color: #AD312F;}
+    a, a span { text-decoration: none ; font-weight: bold ; color: #AD312F;}
 }
 #legal-footer td { padding: 0px 0px 25px 0px; }
 
-#legal-footer div.p { padding: 0 10px ; font-size: 13px ; text-align: center ; color: #AD312F ; margin: 7px 0px 0px 0px; }
-#legal-footer div.p.copy { padding: 0 10px ; font-size: 13px ; text-align: center ; color: #19334A ; margin: 7px 0px 0px 0px; }
+#legal-footer div.p { padding: 0 10px ; font-size: 12px ; text-align: center ; color: #AD312F ; margin: 7px 0px 0px 0px; }
+#legal-footer div.p.copy { padding: 0 10px ; font-size: 12px ; text-align: center ; color: #19334A ; margin: 7px 0px 0px 0px; }
 
+.social-media {
+   padding-bottom: 20px;
+   vertical-align: middle;
+   color: #333;
+   font-size: 12px;
+}
+.social-media img {
+   vertical-align: bottom;
+   margin-left: 5px;
+}
+
+.Twitter {
+   background-color: #2ca9e0;
+   color: #fff;
+}
+.Facebook {
+   background-color: #3a5897;
+   color: #fff;
+}
